k8s/apps/repo-events/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-events
  namespace: apps
  labels:
    app: repo-events
    type: backends
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: repo-events
  template:
    metadata:
      labels:
        app: repo-events
        monitoring: "enabled"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090" 
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: repo-events
          image: registry.cri.epita.fr/mateo.lelong/inde1/repo-events:v0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: metrics
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          # livenessProbe:
          #   httpGet:
          #     path: /liveness
          #     port: 8080
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /readiness
          #     port: 8080
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
