k8s/apps/repo-events/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: repo-events
  namespace: apps
  labels:
    app: repo-events
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: repo-events
                port:
                  number: 8080
